# construction_OHLC_analysis

./: .gitignore  README.md
raw/ohlc/: BMV_CX_20YW.csv  NYSE_CRH_20YW.csv  NYSE_FLR_20YW.csv  NYSE_LGIH_20YW.csv  NYSE_NUE_20YW.csv  NYSE_RUT_20YW.csv  NYSE_SPX_20YW.csv  NYSE_TOL_20YW.csv  NYSE_VMC_20YW.csv
thinkscript/: kg_EveryTickSOHLCP.ts
ts_csv_pipeline/: Cargo.toml
ts_csv_pipeline/src/: cli.rs  grammar.pest  header.rs  main.rs
