[package]
name = "ts_csv_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
pest = "2.7.15"
pest_consume = "1.1.3"
pest_derive = "2.7.15"
serde = { version = "1.0.219", features = ["derive"] }
